# nexus

./: .env.template  Cargo.toml  README.md
inch-api/: Cargo.toml  README.md  v5-swagger.json
inch-api/.openapi-generator/: FILES
inch-api/docs/: ApproveApi.md  ApproveCalldataResponseDto.md  ApproveSpenderResponseDto.md  HealthcheckApi.md  InfoApi.md  NestErrorMeta.md  PathViewDto.md  ProtocolImageDto.md  ProtocolsResponseDto.md  QuoteResponseDto.md  QuoteResponseDtoFromToken.md  QuoteResponseDtoToToken.md  SwapApi.md  SwapErrorDto.md  SwapResponseDto.md  SwapResponseDtoTx.md  TokenDto.md  TokensResponseDto.md  Tx.md
inch-api/src/apis/: approve_api.rs  configuration.rs  healthcheck_api.rs  info_api.rs  mod.rs  swap_api.rs
inch-api/src/models/: approve_calldata_response_dto.rs  approve_spender_response_dto.rs  mod.rs  nest_error_meta.rs  path_view_dto.rs  protocol_image_dto.rs  protocols_response_dto.rs  quote_response_dto.rs  quote_response_dto_from_token.rs  quote_response_dto_to_token.rs  swap_error_dto.rs  swap_response_dto.rs  swap_response_dto_tx.rs  token_dto.rs  tokens_response_dto.rs  tx.rs
src/: lib.rs  main.rs
src/client/: mod.rs
src/cmd/: mod.rs  starknet.rs  swap.rs
src/constants/: mod.rs
src/contract_bindings/: mod.rs  sync_swap_router.rs
src/erc20/: erc20.rs  mod.rs
src/evmclient/: mod.rs
src/inch/: aggregation_router_v5.rs  mod.rs  swap.rs  v5-swagger.json
src/starknet/: bridge.rs  constants.rs  jediswap.rs  mod.rs  starkgate.rs  swap.rs
src/swap/: mod.rs
src/syncswap/: mod.rs
src/wallet/: mod.rs
