[package]
name = "nexus"
version = "0.1.0"
edition = "2021"

[dependencies]
inch_api = { path = "./inch-api" }
ethers = "2.0.4"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
ethers-signers = "2.0.0"
clap = "2.33.3"
anyhow = "1.0.44"
tokio = { version = "1.15.0", features = ["full"] }
swagger = "6.2.1"
num-bigint = { version = "0.4.3"}
sha256 = {version = "1.1.3"}
bip32 = {version = "0.5.0"}
paris =  { version = "1.5.15", features = ["macros"] }
starknet = { git = "https://github.com/xJonathanLEI/starknet-rs" }
starknet-curve = { git = "https://github.com/xJonathanLEI/starknet-rs" }